log/build_2022-09-09_20-51-37/cobots_axis_gui/stdout_stderr.log
-- Found ament_cmake: 0.9.9 (/opt/ros/foxy/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Found rclcpp: 2.4.1 (/opt/ros/foxy/share/rclcpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.2.1 (/opt/ros/foxy/share/rosidl_adapter/cmake)
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 1.0.3 (/opt/ros/foxy/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found ament_cmake_ros: 0.9.2 (/opt/ros/foxy/share/ament_cmake_ros/cmake)
-- Found rqt_gui_cpp: 1.1.2 (/opt/ros/foxy/share/rqt_gui_cpp/cmake)
-- Found ament_lint_auto: 0.9.6 (/opt/ros/foxy/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: /home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/include
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'flake8' to check Python code syntax and style conventions
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'pep257' to check Python code against some of the style conventions in PEP 257
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/hunajpu/dev_tt_ws/build/cobots_axis_gui
[ 12%] Generating include/cobots_axis_gui/moc_cobot_7thaxis.cpp
[ 25%] Generating include/cobots_axis_gui/moc_mytoolbutton.cpp
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/include/cobots_axis_gui/mytoolbutton.h:0: Note: No relevant classes found. No output generated.
Scanning dependencies of target cobot_7thaxis
[ 37%] Building CXX object CMakeFiles/cobot_7thaxis.dir/src/mytoolbutton.cpp.o
[ 50%] Building CXX object CMakeFiles/cobot_7thaxis.dir/src/cobot_7thaxis.cpp.o
[ 62%] Building CXX object CMakeFiles/cobot_7thaxis.dir/include/cobots_axis_gui/moc_mytoolbutton.cpp.o
[ 75%] Building CXX object CMakeFiles/cobot_7thaxis.dir/include/cobots_axis_gui/moc_cobot_7thaxis.cpp.o
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/mytoolbutton.cpp: In constructor 'MyToolButton::MyToolButton(QWidget*)':
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/mytoolbutton.cpp:10:7: error: type 'QToolButton' is not a direct base of 'MyToolButton'
   10 |     : QToolButton(parent), m_ledColor(QColor(Qt::red)), m_label("label"), m_label2("label2"), iDir(1), m_Width(LED_WIDTH)
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/cobot_7thaxis.dir/build.make:88: CMakeFiles/cobot_7thaxis.dir/src/mytoolbutton.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp: In member function 'virtual void rqt_plugin::Cobot7thAxis::saveSettings(qt_gui_cpp::Settings&, qt_gui_cpp::Settings&) const':
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:34:57: warning: unused parameter 'plugin_settings' [-Wunused-parameter]
   34 |   void Cobot7thAxis::saveSettings(qt_gui_cpp::Settings& plugin_settings, qt_gui_cpp::Settings& instance_settings) const
      |                                   ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:34:96: warning: unused parameter 'instance_settings' [-Wunused-parameter]
   34 |   void Cobot7thAxis::saveSettings(qt_gui_cpp::Settings& plugin_settings, qt_gui_cpp::Settings& instance_settings) const
      |                                                                          ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp: In member function 'virtual void rqt_plugin::Cobot7thAxis::restoreSettings(const qt_gui_cpp::Settings&, const qt_gui_cpp::Settings&)':
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:39:66: warning: unused parameter 'plugin_settings' [-Wunused-parameter]
   39 |   void Cobot7thAxis::restoreSettings(const qt_gui_cpp::Settings& plugin_settings, const qt_gui_cpp::Settings& instance_settings)
      |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
/home/hunajpu/dev_tt_ws/src/cobots_7thaxis/cobots_axis_gui/src/cobot_7thaxis.cpp:39:111: warning: unused parameter 'instance_settings' [-Wunused-parameter]
   39 |   void Cobot7thAxis::restoreSettings(const qt_gui_cpp::Settings& plugin_settings, const qt_gui_cpp::Settings& instance_settings)
      |                                                                                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/cobot_7thaxis.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
